# dspy-refrag

./: .env.example  CONTRIBUTING.md  LICENSE  PRODUCTION_READINESS.md  README.md  pyproject.toml  refrag.md
.github/workflows/: ci.yml
analysis/: README.md
analysis/analysis_results/: comparative_analysis_results.json  cost_modeling_results.json  detailed_analysis_2025-10-25_04-12-20.txt  model_categorization_results.json  quality_analysis_results.json  statistical_testing_results.json  summary_report_2025-10-25_04-10-49.txt  temporal_tracking_results.json
analysis/comparative_analysis/: README.md  analyze.py  comparative_analysis.py  cost_modeling.py  generate_summary.py  model_categorization.py  quality_analysis.py  statistical_testing.py  temporal_tracking.py  viz.py
benchmarks/: benchmark_runner.py  benchmark_runner_claude.py  benchmark_runner_gemini.py  benchmark_runner_github.py  benchmark_runner_grok.py  benchmark_runner_ollama.py  benchmark_simple_rag.py  evaluation.py  plotting.py  refrag_benchmark.py  request_lm.py  request_lm_claude.py  request_lm_gemini.py  request_lm_github.py  request_lm_grok.py  request_lm_ollama.py  results.py  utils.py  view_results.py
examples/: quickstart.py
memory/: README.md
memory/memory_refrag/: README.md  memory_enhanced_refrag.py
memory/memory_solution_in_refrag/: README.md  (+4 more)
results/: README.md
tests/: docker-compose.yml  request_format_claude.py  request_format_grok.py  test.py  test_advanced_sensor.py  test_integration.py  test_refrag_basic.py  test_weaviate_retriever.py  vertex_client.py  weaviate_test.py
(+76 files in other folders)
